k8s/dev/app-frontend-svc-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-frontend
  name: app-frontend-svc-dev
  namespace: dev
spec:
  ports:
  - nodePort: 32645
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: app-frontend
  type: LoadBalancer
status:
  loadBalancer: {}
