k8s/dev/app-frontend-ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-frontend-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: dev.encadeado.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-frontend-svc-dev
          servicePort: 3000
